--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, minimal-ui, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Пошлые города {{city}} | ВКонтакте</title>
+    <title>Слив шкур в Подслушано {{city}} | ВКонтакте</title>
     <style>
         body {
             -ms-text-size-adjust: 100%;
